<resources>
    <string name="about">Project Greenhouse\nis a passion project by Zach Murray.\n\nSpecial thanks to Stacey, for showing me the wonder of growing things.</string>
    <string name="add_pic_view">Camera Viewport</string>
    <string name="btn_add_to_gallery">Add to Gallery</string>
    <string name="btn_replace_profile_pic">Replace Profile Pic</string>
    <string name="button_save">Save</string>
    <string name="app_name">ProjectGreenhouse</string>
    <string name="cancel">Cancel</string>
    <string name="cd_swipe">Swipe icon</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="exit">Exit</string>
    <string name="hard_zone1">Zone 1 (-60 to -50 °F)</string>
    <string name="hard_zone2">Zone 2 (-50 to -40 °F)</string>
    <string name="hard_zone3">Zone 3 (-40 to -30 °F)</string>
    <string name="hard_zone4">Zone 4 (-30 to -20 °F)</string>
    <string name="hard_zone5">Zone 5 (-20 to -10 °F)</string>
    <string name="hard_zone6">Zone 6 (-10 to 0 °F)</string>
    <string name="hard_zone7">Zone 7 (0 to 10 °F)</string>
    <string name="hard_zone8">Zone 8 (10 to 20 °F)</string>
    <string name="hard_zone9">Zone 9 (20 to 30 °F)</string>
    <string name="hard_zone10">Zone 10 (30 to 40 °F)</string>
    <string name="hint_word">Nickname</string>
    <string name="home">Home</string>
    <string name="id">Identify</string>
    <string name="inventory">Inventory</string>
    <string name="lorem1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="menu_open">Open</string>
    <string name="menu_close">Close</string>
    <string name="maps">Maps</string>
    <string name="nav_log">DRAWER_NAV_TAG</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="social">Social</string>
    <string name="speciesName_Wiki"><a href="https://en.wikipedia.org/wiki/Rosa_persica">Wikipedia</a></string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="welcome_message">Welcome to\nProject Greenhouse</string>
    <string name="id_activity_title">Plant Identification API\ncoming soon!</string>
    <string name="add_button">Add button</string>
    <string name="filter">Filter</string>
    <string name="maps_title">Maps Viewer\ncoming soon!</string>
    <string name="cd_profile_pic">Profile Picture</string>
    <string name="nickname">Nickname</string>
    <string name="species_name">Species-Name</string>
    <string name="cd_camera_button">Camera Button</string>
    <string name="cd_water_icon">Water Icon</string>
    <string name="cd_heart_icon">Heart Icon</string>
    <string name="cd_freeze_icon">Freeze Icon</string>
    <string name="cd_storm_icon">Storm Icon</string>
    <string name="cd_toxic_icon">Toxic Icon</string>
    <string name="care">Care</string>
    <string name="light">Light</string>
    <string name="water">Water</string>
    <string name="toxicity">Toxicity</string>
    <string name="hardiness_zone">Hardiness Zone</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="mist">Mist</string>
    <string name="moderate">Moderate</string>
    <string name="moist">Moist</string>
    <string name="pets">Pets</string>
    <string name="humans">Humans</string>
    <string name="range">Range</string>
    <string name="notes">Notes</string>
    <string name="add_a_note">Add a note...</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="backup">Backup</string>
    <string name="privacy">Privacy</string>
    <string name="themes">Themes</string>
    <string name="blue">Blue</string>
    <string name="classic">Classic</string>
    <string name="evergreen">Evergreen</string>
    <string name="orange">Orange</string>
    <string name="pink">Pink</string>
    <string name="notifications">Notifications</string>
    <string name="updates">Updates</string>
    <string name="weather_warning">Weather Warning</string>
    <string name="watering_times">Watering Times</string>
    <string name="reminders">Reminders</string>
    <string name="health_checks">Health Checks</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="social_title">Social platform for the plant community coming soon!</string>
    <string name="cd_app_icon">App icon</string>
    <string name="cd_app_name">Project Greenhouse</string>
    <string name="community">Community</string>
    <string name="other">Other</string>
</resources>