<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".profile.PlantProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/test_plant"
            android:contentDescription="@string/cd_profile_pic" />

        <LinearLayout
            android:layout_width="205dp"
            android:layout_height="200dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="#F8F8F8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/speciesName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/species_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="italic" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_pic"
                android:src="@drawable/icon_camera"
                android:contentDescription="@string/cd_camera_button" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="1dp"
                android:layout_height="50dp"
                android:gravity="center">
                <ImageView
                    android:id="@+id/water_icon"
                    style="@style/listItem_icons"
                    app:srcCompat="@drawable/icon_water"
                    android:contentDescription="@string/cd_water_icon" />

                <ImageView
                    android:id="@+id/heart_icon"
                    style="@style/listItem_icons"
                    app:srcCompat="@drawable/icon_heart"
                    android:contentDescription="@string/cd_heart_icon" />

                <ImageView
                    android:id="@+id/freeze_icon"
                    style="@style/listItem_icons"
                    app:srcCompat="@drawable/icon_freeze"
                    android:contentDescription="@string/cd_freeze_icon" />

                <ImageView
                    android:id="@+id/storm_icon"
                    style="@style/listItem_icons"
                    app:srcCompat="@drawable/icon_storm"
                    android:contentDescription="@string/cd_storm_icon" />
                <ImageView
                    android:id="@+id/toxic_icon2"
                    style="@style/listItem_icons"
                    app:srcCompat="@drawable/icon_toxic"
                    android:contentDescription="@string/cd_toxic_icon" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:text="@string/care"
                android:textColor="@color/black"
                android:textSize="34sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:background="?android:attr/listDivider"/>

            <!--Care settings-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--Care descriptions-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"
                    android:textAlignment="viewStart">

                    <TextView
                        style="@style/care"
                        android:text="@string/light"
                        android:layout_marginTop="12dp"/>

                    <TextView
                        style="@style/care"
                        android:text="@string/water" />

                    <TextView
                        style="@style/care"
                        android:text="@string/toxicity" />

                    <TextView
                        style="@style/care"
                        android:text="@string/hardiness_zone" />


                </LinearLayout>

                <!--Care selections-->

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/radio_light">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/low"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/medium"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/high"
                            android:layout_marginStart="9dp"/>

                    </RadioGroup>

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/radio_water">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mist"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/moderate"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/moist"/>

                    </RadioGroup>

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/radio_toxic">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/low"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pets"
                            android:layout_marginStart="2dp"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humans"
                            android:layout_marginStart="33dp"/>

                    </RadioGroup>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/range"
                        android:id="@+id/zone_temp"
                        android:textSize="20sp"
                        android:textAlignment="center"/>

                    <SeekBar
                        android:id="@+id/seekBar"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:max="9"
                        android:progress="0" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:background="?android:attr/listDivider"/>

            <!--Notes section-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:text="@string/notes"
                    android:textColor="@color/black"
                    android:textSize="34sp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_save"
                    android:textColor="@color/white"
                    android:layout_marginStart="200dp"
                    android:id="@+id/note_save"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:textColor="@color/black"
                android:ems="20"
                android:background="@color/light_goldenrod"
                android:inputType="textMultiLine"
                android:textAlignment="viewStart"
                android:gravity="start|top"
                android:text=""
                android:importantForAutofill="no"
                android:hint="@string/add_a_note"/>

            <!--Wikipage-->
            <TextView
                android:id="@+id/speciesNameWiki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/speciesName_Wiki"
                android:textColorLink="#3949AB"
                android:textSize="34sp" />
        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>