<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linear_layout_settings"
    android:orientation="vertical"
    android:layout_marginStart="10dp"
    tools:context=".settings.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="viewStart">
            <!--Account _______________________ -->
            <TextView
                android:id="@+id/account"
                style="@style/settings_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account" />

            <TextView
                style="@style/account"
                android:text="@string/email"
                 />

            <TextView
                style="@style/account"
                android:text="@string/password"
                 />

            <TextView
                style="@style/account"
                android:text="@string/backup"
                 />

            <TextView
                style="@style/account"
                android:text="@string/privacy"
                 />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="?android:attr/listDivider"/>

            <!--Themes _______________________ -->
            <TextView
                android:id="@+id/themes"
                style="@style/settings_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/themes" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/blue"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/classic"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/evergreen"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/orange"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/pink"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="225dp"
                    android:id="@+id/radioGroup_theme">

                    <RadioButton
                        android:id="@+id/blue_option"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/classic_option"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/evergreen_option"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/orange_option"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/pink_option"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp" />
                </RadioGroup>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"/>

            <!--Notifications _______________________ -->
            <TextView
                android:id="@+id/notifications"
                style="@style/settings_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:text="@string/updates"
                android:textColor="@color/black"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:text="@string/weather_warning"
                android:textColor="@color/black"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:text="@string/watering_times"
                android:textColor="@color/black"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:text="@string/reminders"
                android:textColor="@color/black"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:text="@string/health_checks"
                android:textColor="@color/black"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"/>

            <!--Language _______________________ -->
            <TextView
                android:id="@+id/language"
                style="@style/settings_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/english"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/spanish"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="245dp">

                    <RadioButton
                        android:id="@+id/english"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/spanish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </RadioGroup>
            </LinearLayout>
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>