<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/create_nickname"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:hint="@string/hint_word"
        android:inputType="textAutoComplete"
        android:autofillHints="Species or Nickname" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/add_button_save"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/button_save"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/add_cancel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/cancel"
            android:textColor="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
